public class Chance extends Field {
    //CardDeck cardDeck;

    public Chance(int ID, String label, int cost, int income) {
        super(ID, label, cost, income);
    }
}
