public interface IOption {
    String OnAccept(Player p);
    String OnReject(Player p);
}
